--- a/app/assets/javascripts/events.js.erb
+++ b/app/assets/javascripts/events.js.erb
@@ -58,7 +58,7 @@ $(".events.index").ready(function(){
         textColor: 'black'
       },
       {
-        url: 'events.html',
+        url: 'events.json',
         editable: true
       }
     ]
