--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Events</h1>
 
-<table>
+<!-- <table>
   <thead>
     <tr>
       <th>Title</th>
@@ -14,20 +14,36 @@
   </thead>
 
   <tbody>
-    <% @events.each do |event| %>
+    <%# @events.each do |event| %>
       <tr>
-        <td><%= event.title %></td>
-        <td><%= event.start_datetime %></td>
-        <td><%= event.end_datetime %></td>
-        <td><%= event.description %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%#= event.title %></td>
+        <td><%#= event.start_datetime %></td>
+        <td><%#= event.end_datetime %></td>
+        <td><%#= event.description %></td>
+        <td><%#= link_to 'Show', event %></td>
+        <td><%#= link_to 'Edit', edit_event_path(event) %></td>
+        <td><%#= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+    <%# end %>
   </tbody>
 </table>
+ -->
+<br>
+
 
 <br>
 
+<head>
+  <meta charset="utf-8">
+  <!-- <title>jQuery UI Dialog - Modal form</title> -->
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <!-- <script src="//code.jquery.com/jquery-1.10.2.js"></script> -->
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
+</head>
+
+<body>
+  <div id="calendar"></div>
+  <br>
 <%= link_to 'New Event', new_event_path %>
+</body>
