--- a/app/assets/javascripts/events.js.erb
+++ b/app/assets/javascripts/events.js.erb
@@ -63,4 +63,34 @@ $(".events.index").ready(function(){
       }
     ]
   });
+
+  // $(function() {
+  //   var dialog, form,
+  //   dialog = $( "#dialog-form" ).dialog({
+  //     autoOpen: false,
+  //     height: 300,
+  //     width: 350,
+  //     modal: true,
+  //     buttons: {
+  //       "Create an event": addEvent,
+  //       Cancel: function() {
+  //         dialog.dialog( "close" );
+  //       }
+  //     },
+  //     close: function() {
+  //       form[ 0 ].reset();
+  //       allFields.removeClass( "ui-state-error" );
+  //     }
+  //   });
+ 
+  //   form = dialog.find( "form" ).on( "submit", function( event ) {
+  //     event.preventDefault();
+  //     addEvent();
+  //   });
+ 
+  //   $( "#create-event" ).button().on( "click", function() {
+  //     dialog.dialog( "open" );
+  //   });
+  // });
+
 });
