--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for(@event, :remote => true) do |f| %>
+<% modal ||= false %>
+<% remote = modal ? true : false %>
+<%= form_for(@event, remote: remote, html: {role: :form, 'data-model' => 'event'}) do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -11,23 +13,25 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :start_datetime %><br>
-    <%= f.datetime_select :start_datetime %>
-  </div>
-  <div class="field">
-    <%= f.label :end_datetime %><br>
-    <%= f.datetime_select :end_datetime %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div id="dialog-form" title="Create new event">
+    <div class="field">
+      <%= f.label :title %><br>
+      <%= f.text_field :title, class: "text ui-widget-content ui-corner-all" %>
+    </div>
+    <div class="field">
+      <%= f.label :start_datetime %><br>
+      <%= f.datetime_select :start_datetime, class: "text ui-widget-content ui-corner-all" %>
+    </div>
+    <div class="field">
+      <%= f.label :end_datetime %><br>
+      <%= f.datetime_select :end_datetime, class: "text ui-widget-content ui-corner-all" %>
+    </div>
+    <div class="field">
+      <%= f.label :description %><br>
+      <%= f.text_field :description, class: "text ui-widget-content ui-corner-all" %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
   </div>
 <% end %>
