--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,6 +1,6 @@
  <%= javascript_include_tag "patient.js" %>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
-<!-- <script id="patient-template" type="text/x-handlebars-template">
+<script id="patient-template" type="text/x-handlebars-template">
   <div class="entry">
   <h1>{{doctor_id}}</h1>
   <div class="body">
@@ -29,16 +29,26 @@
   debugger;
   $('body').append(html);
 </script>
- -->
+
 <div class="entry">
-  <h1><%= @appointment.doctor_id %></h1>
+  <h1><%#= @appointment.doctor_id %></h1>
   <div class="body">
-    <p><%= "#{@appointment.address} #{@appointment.city} #{@appointment.state} #{@appointment.zip}" %> </p>
-    <p><%= "#{@appointment.eta} #{@appointment.purpose} #{@appointment.appointment_time}" %> </p>
+    <p><%#= @appointments.address %></p>
+    <!-- <p><%= "#{@appointment.address} #{@appointment.city} #{@appointment.state} #{@appointment.zip}" %> </p> -->
+    <!-- <p><%= "#{@appointment.eta} #{@appointment.purpose} #{@appointment.appointment_time}" %> </p> -->
   <!-- <p> {{title}} </p> -->
   </div>
 </div>
 
+<% @appointments.each do |appointment| %>
+      <p><%= appointment.address %>, <%= appointment.city %>, <%= appointment.state %>, <%= appointment.zip %></p>
+      <p><%= appointment.purpose %>, <%= appointment.appointment %>
+      <tr>
+        <td><%= link_to 'Show', shoe %></td>
+        <td><%= link_to 'Edit', edit_shoe_path(shoe) %></td>
+        <td><%= link_to 'Destroy', shoe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
 
 <% if notice %>
   <p class="alert alert-success"><%= notice %></p>
