--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,10 @@ body, nav, div, span, article, p, ul, li, a {
   }
 }
 
+.appointment {
+  border: 1px solid #D30006;
+}
+
 
 @media only screen and (max-width : 480px) {
   body, nav, div, span, article, p, ul, li, a {
