--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <!-- <link href='fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
 </head>
 
-<body class="<%= controller_name %> <%= action_name %>" data-current-patient="<%= current_patient.try(:id) %>" data-current-patient-email="<%= current_patient.try(:email) %>" data-current-doctor=" <%= current_doctor.try(:id) %>" data-current-doctor-email="<%= current_doctor.try(:email)%>">
+<body class="<%= controller_name %> <%= action_name %>" data-current-patient="<%= current_patient.try(:id) %>" data-current-patient-email="<%= current_patient.try(:email) %>" data-current-doctor=" <%= current_doctor.try(:id) %>" data-current-doctor-email="<%= current_doctor.try(:email)%>"
 
 <main>
   <div class="header">
