--- a/app/assets/javascripts/doctors.js.erb
+++ b/app/assets/javascripts/doctors.js.erb
@@ -20,12 +20,18 @@ $(".doctors.index").ready(function(){
         maxTime: "18:00:00"
       }
     },
-    events: {
+    eventSources: [
+    {
       googleCalendarId: 'n825ka53ioka43rmf80b9pagn4@group.calendar.google.com',
       color: 'yellow',
       textColor: 'black',
       editable: true
     },
+    {
+      url: 'events.json',
+      editable: true
+    }
+    ],
     dayClick: function(date, jsEvent, view) {
       alert('Clicked on: ' + date.format());
       // alert('Coordinates: ' + jsEvent.pageX + ',' + jsEvent.pageY);
@@ -114,8 +120,6 @@ $(".doctors.index").ready(function(){
       // $.post('/doctors/' + 1 + '/send_appointment'){
       //   data: ""
       // }
-
-
       $.ajax({
         type: "POST",
         url: "/doctors/" + 1 + "/send_appointment",
@@ -155,9 +159,4 @@ $(".doctors.index").ready(function(){
       dialog.dialog( "open" );
     });
   });
-});
-
-$(".doctors.show").ready(function () {
-  console.log("I can see you!!")
-  // body...
 });
