saving patient show

--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -34,13 +34,8 @@
 
 <% @appointments.each do |appointment| %>
       <p><%= appointment.address %>, <%= appointment.city %>, <%= appointment.state %>, <%= appointment.zip %></p>
-      <p><%= appointment.purpose %>, <%= appointment.appointment %>
-      <tr>
-        <td><%= link_to 'Show', shoe %></td>
-        <td><%= link_to 'Edit', edit_shoe_path(shoe) %></td>
-        <td><%= link_to 'Destroy', shoe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+      <p><%= appointment.purpose %>, <%= appointment.appointment %></p>
+<% end %>
 
 <% if notice %>
   <p class="alert alert-success"><%= notice %></p>
