moving script tag to layouts/application.html.erb

--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -2,14 +2,14 @@
   <p class="validateTips">All form fields are required.</p>
   <form>
     <fieldset>
-      <label for="purpose">Purpose</label>
+      <label for="purpose">Title</label>
       <input type="text" name="purpose" id="purpose" class="text ui-widget-content ui-corner-all">
-      <label for="appointment">Appointment Time</label>
+      <label for="appointment">Start Time</label>
       <input type="text" name="appointment" id="appointment" class="text ui-widget-content ui-corner-all">
       <!-- <label for="end">End</label> -->
       <!-- <input type="text" name="end" id="end" placeholder="End Date" class="text ui-widget-content ui-corner-all"> -->
-      <label for="email">Email</label>
-      <input type="text" name="email" id="email" class="text ui-widget-content ui-corner-all">
+      <!-- <label for="email">Email</label> -->
+      <!-- <input type="text" name="email" id="email" class="text ui-widget-content ui-corner-all"> -->
       <!-- Allow form submission with keyboard without duplicating the dialog button -->
       <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
     </fieldset>
