--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,6 +1,5 @@
 <%#= javascript_include_tag "patient.js" %>
-<!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
-<script id="patient-template" type="text/x-handlebars-template">
+<!-- <script id="patient-template" type="text/x-handlebars-template">
   <div class="entry">
   <h1>{{doctor_id}}</h1>
   <div class="body">
@@ -10,7 +9,8 @@
   </div>
   </div>
 </script>
- --><!-- <script>
+ -->
+ <!-- <script>
   var context;
   // $.get('/patients/'+$('body').data("current-patient")+'/find_appointments').done(function(data){
   //   debugger;
@@ -29,7 +29,7 @@
   debugger;
   $('body').append(html);
 </script>
- -->
+
 
 
 
