--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -1,5 +1,5 @@
 <div id="dialog-form" title="Create new event">
-  <p class="validateTips">All form fields are required.</p>
+  <p class="validateTips">Event</p>
   <form>
     <fieldset>
       <label for="purpose">Title</label>
