--- a/app/assets/javascripts/patient.js.erb
+++ b/app/assets/javascripts/patient.js.erb
@@ -48,7 +48,9 @@ var doctor_id;
 
 function chosenAppt() {
   address = $(this).find("#appt_address").text()
+  console.log(address)
   doctor_id = $(this).find("#doctor_id").text()
+  console.log(doctor_id)
   // console.log()
   // $('body').data("chosen-doctor", $(this).find("#doctor_id").text())
   // console.log($(this).find("#doctor_id").text())
@@ -64,6 +66,7 @@ function getLocation() {
 }
 
 function showPositionInMap(position) {
+  console.log("look at me")
     // y.innerHTML = "Latitude: " + position.coords.latitude +
     // "<br>Longitude: " + position.coords.longitude;
   var geocoder = new google.maps.Geocoder();
@@ -71,9 +74,13 @@ function showPositionInMap(position) {
 
     if (status == google.maps.GeocoderStatus.OK) {
       var latitude = results[0].geometry.location.lat();
+  console.log(latitude)
       var longitude = results[0].geometry.location.lng();
+  console.log(longitude)
       var origin = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+  console.log(origin)
       var destination = new google.maps.LatLng(latitude,longitude);
+  console.log(destination)
       calculateDistances(origin, destination)
     } 
   }); 
