--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,4 +1,5 @@
 <%#= javascript_include_tag "patient.js" %>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script> -->
 <!-- <script id="patient-template" type="text/x-handlebars-template">
   <div class="entry">
   <h1>{{doctor_id}}</h1>
@@ -56,7 +57,6 @@
 <br>
 <br>
 <div id="events"></div>
-
 <br>
 <br>
 <br>
@@ -64,6 +64,8 @@
 <div id="travel">
   <p>How are you travelling there?</p>
   <select id="buttonDiv">
+<br>
+<br>
     <option value="driving">Driving</option>
     <option value="transit">Public transportation</option>
     <option value="walking">Walking</option>
