--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -11,7 +11,7 @@
   </div>
 </script>
  -->
- <!-- <script>
+<!-- <script>
   var context;
   // $.get('/patients/'+$('body').data("current-patient")+'/find_appointments').done(function(data){
   //   debugger;
@@ -30,7 +30,7 @@
   debugger;
   $('body').append(html);
 </script>
-
+ -->
 
 
 
@@ -53,7 +53,7 @@
   <% end %>
 </p>
 
-<!-- <div id="calendar" height: "600" width: "800"></div> -->
+<div id="calendar" height: "600" width: "800"></div>
 <br>
 <br>
 <div id="events"></div>
