--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -8,9 +8,11 @@
 </head>
 
 <body>
+  <br><br><br><br><br>
   <div id="calendar"></div>
-  <%= render 'form' %>
+  <br>
+  <%#= render 'form', modal: true %>
   <br>
   <button id="create-event">Create new event</button>
-  <%= button_to 'En Route', @doctor, id: 'create-event', method: :get %>
+  <%#= button_to 'En Route', @doctor, id: 'create-event', method: :get %>
 </body>
