--- a/app/assets/javascripts/patient.js.erb
+++ b/app/assets/javascripts/patient.js.erb
@@ -1,31 +1,6 @@
 console.log('loaded bro!')
 var appointment = "";
 
-$(function() {
-    // $('#calendar').fullCalendar({
-    //     googleCalendarApiKey: 'AIzaSyB2nCL_6SDCvC8RIHC_HLqENabze0FSvMs',
-    //     businessHours: {
-    //       start: '7:00:00',
-    //       end: '21:00:00'
-    //     },
-    //     views:{
-    //       agenda: {
-    //         minTime: "07:00:00",
-    //         maxTime: "21:00:00"
-    //       }
-    //     },
-    //     height: 300,
-    //     events: {
-    //         googleCalendarId: $('body').data("current-patient-email")
-    //     },
-    //     defaultView: 'agendaDay',
-    //     eventClick: function(event) {
-    //       this.href = "";
-    //       appointment = event.title;
-    //     } ,
-    // });
-});
-
 
 $("#chosenDoctor").on("click",function(){
   var x = $('select')[0].value;
@@ -51,7 +26,7 @@ var doctor_id;
 function chosenAppt() {
   address = $(this).find("#appt_address").text()
   console.log(address);
-  doctor_id = $(this).find("#doctor_id").text()
+  doctor_id = $(this).data().doctorId
   console.log(doctor_id);
   // console.log()
   // $('body').data("chosen-doctor", $(this).find("#doctor_id").text())
@@ -83,8 +58,8 @@ function showPositionInMap(position) {
       var destination = new google.maps.LatLng(latitude,longitude);
       console.log(destination);
       calculateDistances(origin, destination)
-    } 
-  }); 
+    }
+  });
 }
 
 function determineTravelType(transportation){
@@ -122,7 +97,7 @@ function callback(response, status) {
     var outputDiv = $('#outputDiv')[0];
     outputDiv.innerHTML = '';
     outputDiv.innerHTML = origins + ' to ' + destinations + ': ' + results.distance.text + ' in ' + results.duration.text + '<br>';
-    eventObject = { 
+    eventObject = {
       doctor_id: doctor_id,
       eta: results.duration.text
      }
