--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -11,28 +11,30 @@
   </div>
 </script>
  -->
- <!-- <script>
-  var context;
-  // $.get('/patients/'+$('body').data("current-patient")+'/find_appointments').done(function(data){
-  //   debugger;
-  // }) TRY THIS
-  var source   = $("#patient-template").html();
-  var template = Handlebars.compile(source);
-  context;
 
-  // NOEL, this script parses take a Javascript object and render it on the DOM. on this page there is <%= current_patient.appointments %>, or you can do an ajax call. I set up a route for you it is called get '/find_appointments' => 'patients#find_appointments',as: :'find_appointments'
-
-  $.get('/doctors/' + 1 + '/send_appointment')
-
-  <%= current_patient.appointments %>
-
-  var html = template(context);
-  debugger;
-  $('body').append(html);
-</script>
-
+<!-- //   var context;
+//   // $.get('/patients/'+$('body').data("current-patient")+'/find_appointments').done(function(data){
+//   //   debugger;
+//   // }) TRY THIS
+//   var source   = $("#patient-template").html();
+//   var template = Handlebars.compile(source);
+//   context;
+//
+//   // NOEL, this script parses take a Javascript object and render it on the DOM. on this page there is <%= current_patient.appointments %>, or you can do an ajax call. I set up a route for you it is called get '/find_appointments' => 'patients#find_appointments',as: :'find_appointments'
+//
+//   $.get('/doctors/' + 1 + '/send_appointment')
+//
+//   <%= current_patient.appointments %>
+//
+//   var html = template(context);
+//   debugger;
+//   $('body').append(html); -->
 
 
+
+<br>
+<br>
+<br>
 
 <% if notice %>
   <p class="alert alert-success"><%= notice %></p>
@@ -53,13 +55,23 @@
   <% end %>
 </p>
 
-<!-- <div id="calendar" height: "600" width: "800"></div> -->
-<br>
 <br>
 <div id="events"></div>
-<br>
-<br>
-<br>
+
+<div class="entry">
+  <% @appointments.each do |appointment| %>
+  <div class="appointment" data-doctor-id = "<%= appointment.doctor_id %>">
+    <label>Doctor Name</label>
+    <p id="appt_name"><%= appointment.doctor.first_name %> <%= appointment.doctor.last_name %></p>
+    <label>Appointment Address</label>
+    <p id="appt_address"><%= appointment.address %> <%= appointment.city %> <%= appointment.state %> <%= appointment.zip %></p>
+    <label>Appointment Time</label>
+    <p id="appt_time"><%= appointment.start_datetime %></p>
+    <label>Purpse</label>
+    <p id="appt_purpose"><%= appointment.title %></p>
+  </div>
+  <% end %>
+</div>
 <br>
 <div id="travel">
   <p>How are you travelling there?</p>
@@ -77,15 +89,3 @@
 <div id="outputDiv"></div>
 
 <p id="demo"></p>
-<div class="entry">
-  <h1><%#= appointment.doctor_id %></h1>
-    <% @appointments.each do |appointment| %>
-        <div class="appointment">
-          <label>Appointment Address</label>
-          <p id="appt_address"><%= appointment.address %> <%= appointment.city %> <%= appointment.state %> <%= appointment.zip %></p>
-          <label>Appointment Time</label>
-          <p id="appt_time"><%= appointment.start_datetime %></p>
-          <p id="doctor_id"><%= appointment.doctor_id %></p>
-        </div>
-    <% end %>
-</div>
