--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -11,7 +11,6 @@
   </div>
 </script>
  -->
-<<<<<<< HEAD
 
 <!-- //   var context;
 //   // $.get('/patients/'+$('body').data("current-patient")+'/find_appointments').done(function(data){
@@ -30,29 +29,6 @@
 //   var html = template(context);
 //   debugger;
 //   $('body').append(html); -->
-
-=======
-<!-- <script>
-  var context;
-  // $.get('/patients/'+$('body').data("current-patient")+'/find_appointments').done(function(data){
-  //   debugger;
-  // }) TRY THIS
-  var source   = $("#patient-template").html();
-  var template = Handlebars.compile(source);
-  context;
-
-  // NOEL, this script parses take a Javascript object and render it on the DOM. on this page there is <%= current_patient.appointments %>, or you can do an ajax call. I set up a route for you it is called get '/find_appointments' => 'patients#find_appointments',as: :'find_appointments'
-
-  $.get('/doctors/' + 1 + '/send_appointment')
-
-  <%= current_patient.appointments %>
-
-  var html = template(context);
-  debugger;
-  $('body').append(html);
-</script>
- -->
->>>>>>> 71d7cfb821b5c0dbfef6220c14bdf2781c68c07d
 
 
 <br>
@@ -78,11 +54,6 @@
   <% end %>
 </p>
 
-<<<<<<< HEAD
-=======
-<div id="calendar" height: "600" width: "800"></div>
-<br>
->>>>>>> 71d7cfb821b5c0dbfef6220c14bdf2781c68c07d
 <br>
 <div id="events"></div>
 
@@ -94,7 +65,7 @@
     <label>Appointment Address</label>
     <p id="appt_address"><%= appointment.address %> <%= appointment.city %> <%= appointment.state %> <%= appointment.zip %></p>
     <label>Appointment Time</label>
-    <p id="appt_time"><%= appointment.start_datetime %></p>
+    <p id="appt_time"><%= appointment.start %></p>
     <label>Purpse</label>
     <p id="appt_purpose"><%= appointment.title %></p>
   </div>
@@ -102,7 +73,7 @@
 </div>
 <br>
 <div id="travel">
-  <p>How are you travelling there?</p>
+  <p id="p_travel">How are you travelling there?</p>
   <select id="buttonDiv">
     <option value="driving">Driving</option>
     <option value="transit">Public transportation</option>
@@ -110,9 +81,9 @@
   </select>
   <br>
   <br>
-<%= button_to "Start my paperwork, I'm leaving now", '#', method: :get, id: "tracking" %>
+<%= button_to "  On My Way  ", '#', method: :get, id: "tracking" %>
   <br>
-<%= button_to "Send Message", "/messages.html", method: :get %>
+<%= button_to "  Send Message  ", "/messages.html", method: :get, id: "send_message" %>
 </div>
 <div id="outputDiv"></div>
 
