--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,10 @@
  *= require_self
  */
 
+
+
 $first: #616161;
-$second: #FFEB3E;
+$second: #00336a;
 $third: #00C4FA;
 $fourth: #F5F5F5;
 $fifth: silver;
@@ -25,19 +27,20 @@ body, nav, div, span, article, p, ul, li, a {
     margin: 0;
     border: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif; 
+    font-family: 'Roboto', sans-serif;
     text-decoration: none; }
 
 .header {
   width: 100%;
-  height: 52px;
+  height: 2rem;
   background-color: $second;
   position: fixed;
   top: 0px;
-  
+
   #logo{
     font-size: 36px;
     padding-left: 10px;
+    color: white;
   }
 }
 
@@ -45,13 +48,104 @@ body, nav, div, span, article, p, ul, li, a {
   border: 1px solid #D30006;
 }
 
+.application  {
+  background-image: url("http://i1.wp.com/www.qasimnaqvi.me/wp-content/uploads/2015/03/Screen-Shot-2015-03-24-at-7.00.34-PM.png");
+  background-size: cover;
+}
+
+body {
+  background-image: url("http://i2.wp.com/www.qasimnaqvi.me/wp-content/uploads/2015/03/Screen-Shot-2015-03-24-at-4.40.19-PM.png");
+  background-size: cover;
+}
+
+#p_travel {
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+
+}
+
+.navbar-text, .navbar-link{
+  color: white;
+  text-align: right;
+  padding-right:0.5rem;
+  // position: absolute;
+  // left: 100px;
+  // top: 150px;
+}
+
+.patient_button {
+  position: fixed;
+  top: 37rem;
+  left: 15rem;
+  -moz-box-shadow:inset 0px 39px 0px -24px #eceeec ;
+  -webkit-box-shadow:inset 0px 39px 0px -24px #eceeec ;
+  box-shadow:inset 0px 39px 0px -24px #eceeec ;
+  background-color:#eceeec ;
+  -moz-border-radius:4px;
+  -webkit-border-radius:4px;
+  border-radius:4px;
+  border:1px solid #ffffff ;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff ;
+  font-family:arial;
+  font-size: 5rem;
+  padding:7px 20px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #b23e35 ;
+}
+
+.doctor_button {
+  position: fixed;
+  top: 37rem;
+  right: 15rem;
+  -moz-box-shadow:inset 0px 39px 0px -24px #eceeec ;
+  -webkit-box-shadow:inset 0px 39px 0px -24px #eceeec ;
+  box-shadow:inset 0px 39px 0px -24px #eceeec ;
+  background-color:#eceeec ;
+  -moz-border-radius:4px;
+  -webkit-border-radius:4px;
+  border-radius:4px;
+  border:1px solid #ffffff ;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff ;
+  font-family:arial;
+  font-size:15px;
+  padding:7px 20px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #b23e35 ;
+}
+
+#travel{
+  text-align:center;
+  margin: 0 auto;
+}
+
+#buttonDiv{
+  margin: 2rem;
+  width: 20rem;
+  font-size: 1rem;
+  height: 2rem;
+}
+
+#tracking{
+  margin: 0 auto;
+  font-size: 1rem;
+}
+
+#send_message{
+  margin: 0 auto;
+  font-size: 1rem;
+}
 
 @media only screen and (max-width : 480px) {
   body, nav, div, span, article, p, ul, li, a {
     margin: 0;
     border: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif; 
+    font-family: 'Roboto', sans-serif;
     text-decoration: none; }
 
   body {
@@ -64,7 +158,7 @@ body, nav, div, span, article, p, ul, li, a {
     background-color: $second;
     position: fixed;
     top: 0px;
-    
+
     #logo{
       font-size: 36px;
       padding-left: 10px;
@@ -125,14 +219,9 @@ body, nav, div, span, article, p, ul, li, a {
     font-size: 1.5;
     display: block;
     border-radius: 5px;
-      
+
       &:active {
         background-color: $sixth;
       }
   }
 }
-
-
-
-
-
