--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,8 +19,8 @@
       <%= f.text_field :title, class: "text ui-widget-content ui-corner-all" %>
     </div>
     <div class="field">
-      <%= f.label :start_datetime %><br>
-      <%= f.datetime_select :start_datetime, class: "text ui-widget-content ui-corner-all" %>
+      <%= f.label :start %><br>
+      <%= f.datetime_select :start, class: "text ui-widget-content ui-corner-all" %>
     </div>
     <div class="field">
       <%= f.label :end_datetime %><br>
