--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Start datetime:</strong>
-  <%= @event.start_datetime %>
+  <strong>Start:</strong>
+  <%= @event.start %>
 </p>
 
 <p>
