--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -84,7 +84,7 @@
           <label>Appointment Address</label>
           <p id="appt_address"><%= appointment.address %> <%= appointment.city %> <%= appointment.state %> <%= appointment.zip %></p>
           <label>Appointment Time</label>
-          <p id="appt_time"><%= appointment.start_datetime %></p>
+          <p id="appt_time"><%= appointment.start %></p>
           <p id="doctor_id"><%= appointment.doctor_id %></p>
         </div>
     <% end %>
