--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -54,7 +54,7 @@
 <table class="laterAppt">
 </table>
 
-<%= link_to 'Calendar', doctors_path %>
+<%= button_to 'Calendar', doctors_path, method: :get %>
 
 <script>
 $(function(){
@@ -77,10 +77,10 @@ $(function(){
       $('.laterAppt').append(descripObject);
       data.forEach(function(element, index, array){
         var patientAppt = $('<tr>').attr('id', 'patientAppt');
-          var start_datetime = $('<td>').attr('id', 'start_datetime').text(element.start_datetime);
+          var start = $('<td>').attr('id', 'start').text(element.start);
           var name = $('<td>').attr('id', 'name').text(element.patient.first_name + ' ' + element.patient.last_name);
           var title = $('<td>').attr('id', 'purpose').text(element.title);
-          var patientObject = patientAppt.append(start_datetime).append(name).append(title);
+          var patientObject = patientAppt.append(start).append(name).append(title);
       // debugger;
           if (element.eta != null) {
             $('.enRoute').append(patientObject);
