--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
     <%# @events.each do |event| %>
       <tr>
         <td><%#= event.title %></td>
-        <td><%#= event.start_datetime %></td>
+        <td><%#= event.start %></td>
         <td><%#= event.end_datetime %></td>
         <td><%#= event.description %></td>
         <td><%#= link_to 'Show', event %></td>
