almost done styling

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -54,51 +54,272 @@
 <table class="laterAppt">
 </table>
 
-<%= button_to 'Calendar', doctors_path, method: :get %>
+<%#= button_to 'Calendar', doctors_path, method: :get %>
+
+
+
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <title></title>
+
+  <!-- CSS  -->
+  <!-- <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
+  <!-- <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
+</head>
+<body>
+  <nav class="red accent-3" role="navigation">
+    <div class="container">
+      <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo">
+      IN-LOOP</a>
+      <!-- <img src="in loop logo.png"> -->
+        <ul class="right">
+          <li><a href="#">View</a></li>
+          <li><a href="#">Calendar</a></li>
+          <li><a href="#">Logout</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="#">View</a></li>
+          <li><a href="#">Calendar</a></li>
+          <li><a href="#">Logout</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+      </div>
+    </div>
+  </nav>
+<!--   <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <br><br>
+      <h1 class="header center red-text">Blah Blah Stuff</h1>
+      <div class="row center">
+        <h5 class="header col s12 light">Whatever</h5>
+      </div>
+      <div class="row center">
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light red">Click this</a>
+      </div>
+      <br><br>
+
+    </div>
+  </div>
+ -->
+
+  <div class="container">
+    <div class="row">
+      <div class="col s8">
+        <table class="hoverable">
+          <h5 class="header center red-text">Current Waiting List</h5>
+          <thead>
+            <tr>
+                <th data-field="id">Input</th>
+                <th data-field="name">Input</th>
+                <th data-field="price">Input</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col s4">
+        <table class="hoverable">
+          <h5 class="header left red-text">Seen Today</h5>
+          <thead>
+            <tr>
+                <th data-field="id">Input</th>
+                <th data-field="name">Input</th>
+                <th data-field="price">Input</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col s8">
+        <table class="hoverable">
+          <h5 class="header center red-text">Currently Arriving List with ETA</h5>
+          <thead>
+            <tr>
+                <th data-field="id">Input</th>
+                <th data-field="name">Input</th>
+                <th data-field="price">Input</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col s4">
+        <table class="hoverable laterAppt">
+          <h5 class="header left red-text">Upcoming Appointments</h5>
+          <thead>
+            <tr>
+              <th data-field="id">Input</th>
+              <th data-field="name">Input</th>
+              <th data-field="price">Input</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <footer class="page-footer red">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Irreverent Honey Badgers Bio</h5>
+          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Settings</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Qasim</a></li>
+            <li><a class="white-text" href="#!">Katie</a></li>
+            <li><a class="white-text" href="#!">Jackson</a></li>
+            <li><a class="white-text" href="#!">Noel</a></li>
+            <li><a class="white-text" href="#!">Anya</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="red-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- <script src="js/materialize.js"></script> -->
+  <!-- <script src="js/init.js"></script> -->
+</body>
+
+
+
+
 
 <script>
-$(function(){
-  var m = function(){
-    $.get('/doctors/' + '<%= current_doctor.id %>' + '/get_patient').done(function(data){
-      console.log("mooo");
-    var descripRow = $('<tr>').attr('id', 'descripRow');
-      var enRouteRow = $('<tr>').attr('id', 'enRouteRow');
-      var appt = $('<td>').attr('id', 'appt').text("Appt");
-      var patientName = $('<td>').attr('id', 'name').text("Name");
-      var purpose = $('<td>').attr('id', 'purpose').text("Purpose");
-      var appt2 = $('<td>').attr('id', 'appt').text("Appt");
-      var patientName2 = $('<td>').attr('id', 'name').text("Name");
-      var purpose2 = $('<td>').attr('id', 'purpose').text("Purpose");
-      var checkbox = $('<td>').attr('id', 'checkbox').text("Checkbox");
-      var descripObject = descripRow.append(appt).append(patientName).append(purpose);
-      var eta = $('<td>').attr('id', 'eta').text("ETA");
-      var enRouteObject= enRouteRow.append(appt2).append(patientName2).append(purpose2).append(eta).append(checkbox);
-      $('.enRoute').append(enRouteObject);
-      $('.laterAppt').append(descripObject);
-      data.forEach(function(element, index, array){
-        var patientAppt = $('<tr>').attr('id', 'patientAppt');
-          var start = $('<td>').attr('id', 'start').text(element.start);
-          var name = $('<td>').attr('id', 'name').text(element.patient.first_name + ' ' + element.patient.last_name);
-          var title = $('<td>').attr('id', 'purpose').text(element.title);
-          var patientObject = patientAppt.append(start).append(name).append(title);
-      // debugger;
-          if (element.eta != null) {
-            $('.enRoute').append(patientObject);
-            var eta = $('<td>').attr('id', 'eta').text(element.eta);
-            var checkbox = $('<input>').attr("id","checkbox").attr("type","checkbox");
-            patientObject.append(eta).append(checkbox).append(checkbox);
-          }
-          else {
-            $('.laterAppt').append(patientObject);
-          }
-        });
-    });
-  $('.enRoute').empty();
-  $('.laterAppt').empty();
-  };
-  setInterval(m,2500);
-});
-
-
-
+  $(function(){
+    var m = function(){
+      $.get('/doctors/' + '<%= current_doctor.id %>' + '/get_patient').done(function(data){
+        console.log("mooo");
+      var descripRow = $('<tr>').attr('id', 'descripRow');
+        var enRouteRow = $('<tr>').attr('id', 'enRouteRow');
+        var appt = $('<td>').attr('id', 'appt').text("Appt");
+        var patientName = $('<td>').attr('id', 'name').text("Name");
+        var purpose = $('<td>').attr('id', 'purpose').text("Purpose");
+        var appt2 = $('<td>').attr('id', 'appt').text("Appt");
+        var patientName2 = $('<td>').attr('id', 'name').text("Name");
+        var purpose2 = $('<td>').attr('id', 'purpose').text("Purpose");
+        var checkbox = $('<td>').attr('id', 'checkbox').text("Checkbox");
+        var descripObject = descripRow.append(appt).append(patientName).append(purpose);
+        var eta = $('<td>').attr('id', 'eta').text("ETA");
+        var enRouteObject= enRouteRow.append(appt2).append(patientName2).append(purpose2).append(eta).append(checkbox);
+        $('.enRoute').append(enRouteObject);
+        $('.laterAppt').append(descripObject);
+        data.forEach(function(element, index, array){
+          var patientAppt = $('<tr>').attr('id', 'patientAppt');
+            var start = $('<td>').attr('id', 'start').text(element.start);
+            var name = $('<td>').attr('id', 'name').text(element.patient.first_name + ' ' + element.patient.last_name);
+            var title = $('<td>').attr('id', 'purpose').text(element.title);
+            var patientObject = patientAppt.append(start).append(name).append(title);
+        // debugger;
+            if (element.eta != null) {
+              $('.enRoute').append(patientObject);
+              var eta = $('<td>').attr('id', 'eta').text(element.eta);
+              var checkbox = $('<input>').attr("id","checkbox").attr("type","checkbox");
+              patientObject.append(eta).append(checkbox).append(checkbox);
+            }
+            else {
+              $('.laterAppt').append(patientObject);
+            }
+          });
+      });
+    $('.enRoute').empty();
+    $('.laterAppt').empty();
+    };
+    setInterval(m,2500);
+  });
 </script>
